--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - ./backups:/backups
             - memedata:/var/lib/postgresql/data
         env_file:
-            - ./environments/memedata.env
+            - ./.env
         ports:
             - 5432:5432
     rejson:
@@ -94,6 +94,4 @@ services:
     #         - 5555:5555
 volumes:
     memedata:
-    hivedata:
     rejson:
-    sitedata:
