--- a/web/backend/ormconfig.json
+++ b/web/backend/ormconfig.json
@@ -10,11 +10,8 @@
       "synchronize": true,
       "logging": false,
       "entities": [
-         "src/models/comment/Comment.ts",
-         "src/models/meme/Meme.ts",
-         "src/models/user/User.ts",
-         "src/models/CommentVote.ts",
-         "src/models/MemeVote.ts"
+         "src/models/wager/Wager.ts",
+         "src/models/user/User.ts"
       ],
       "migrations": [
          "src/migration/**/*.ts"
