--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             - NODE_ENV=development
         ports:
             - 3000:3000
+        stdin_open: true
     backend:
         build: ./web/backend
         container_name: backend
